--- a/views/partials/layout.pug
+++ b/views/partials/layout.pug
@@ -11,7 +11,7 @@ html
 		script(src='js/highlight.pack.js')
 		script.
 			document.createElement ( 'template' ); // see POLYFILL at bottom
-	body.flex-parent.column
+	body#page.flex-parent.column
 		.flex-fill.flex-parent.column.layout-column
 			h2#page-heading.column-item.center Eon Project Forums
 			block page-nav
