--- a/views/partials/layout.pug
+++ b/views/partials/layout.pug
@@ -4,10 +4,11 @@ html
 		meta(charset='utf-8')
 		title#page-title Eon Forum & Chat
 		link(rel='stylesheet', type='text/css', href='css/site.css')
-		link(rel='stylesheet', type='text/css', href='css/atelier-estuary-dark.css')
-		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js')
-		script(src='https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.slim.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js')
+		script(src='js/jquery-ui.min.js')
+		link(rel='stylesheet', type='text/css', href='css/atelier-estuary-dark.css')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js')
 		script(src='js/highlight.pack.js')
 		script.
 			document.createElement ( 'template' ); // see POLYFILL at bottom
