--- a/views/partials/forum.pug
+++ b/views/partials/forum.pug
@@ -68,6 +68,6 @@ append content
 	#user-chat-new.flex-parent.column.layout-column.hidden
 		h3#user-chat-with
 		h5#user-chat-topic.flex-none.column-item Title
-		textarea(id='user-chat-new-title', rows='1', wrap='off', placeholder='Organize your chat\'s with a topic')
+		textarea(id='user-chat-new-title', rows='1', wrap='off', placeholder='Organize your conversations with a topic')
 		.column-item
 			input(id='create-chat', class='right', type='button', value='Create Chat')
