--- a/views/partials/templates.pug
+++ b/views/partials/templates.pug
@@ -11,23 +11,24 @@ append templates
 			.about.flex-none.column-item.flex-parent.row
 			.comments.flex-none.column-item.flex-parent.column
 				.flex-none.flex-parent.row
-					h6.show-comments.link Show Comments
-					.flex-fill
-					h6.return.link Return to Category
+					h6.show-comments.flex-none.link Show Comments
+					.flex-fill.flex-center.flex-parent.row
+						h6.show-topics.flex-none.link Go to Topics
+					h6.return.flex-none.link Return to Categories
 				.replies.flex-none.column-item.flex-parent.column.hidden
 				.flex-right.flex-parent.row.hidden
 					.more-comments.flex-fill.flex-center.flex-parent.row.hidden
 						span.link More Comments
 						.loading.hidden
 					.reply.flex-none.link Reply to Category
-			.topics.flex-none.column-item.flex-parent.column
-				h6.show-topics.link Hide Topics for This Category
-				.topic-stubs.flex-none.column-item.flex-parent.column
-				.flex-right.flex-parent.row
-					.flex-fill.flex-center.flex-parent.row
-						span.link More Topics
-						.loading.hidden
-					.new-topic.flex-none.link New Topic
+			// .topics.flex-none.column-item.flex-parent.column
+			// 	h6.show-topics.link Hide Topics for This Category
+			// 	.topic-stubs.flex-none.column-item.flex-parent.column
+			// 	.flex-right.flex-parent.row
+			// 		.flex-fill.flex-center.flex-parent.row
+			// 			span.link More Topics
+			// 			.loading.hidden
+			// 		.new-topic.flex-none.link New Topic
 	
 	template#template-stub
 		.stub.flex-none.column-item.flex-parent.column
