--- a/views/partials/page-nav.pug
+++ b/views/partials/page-nav.pug
@@ -1,33 +1,22 @@
 append page-nav
-	ul.page-nav.column-item
-		li
-			ul.page-nav
-				li
-					span= 'Select: '
-					select#select
-						option(id='category', value='category', selected='selected') Category
-						option(id='topic', value='topic') Topic
-				li
-					span= 'Owner: '
-					select#owner
-						option(value='all-users', selected='selected') (default) All users
-						if owners !== undefined
-							each owner in owners
-								option(value='#{"owner_"+owner.id}') #{owner.name}
-				li
-					span= 'Order By: '
-					select#order
-						option(value='oldest', selected='selected') oldest
-						option(value='newest') newest
-		li
-			ul.page-nav
-				li #{'Welcome, '}
-					span(id='user-name', data-id=id) #{name}
-					| !
-				li
-					| #{'Chat: '}
-					select#online
-						option ( Forum )
-						if online !== undefined
-							each user in online
-								option(value='#{user.name}') #{user.name}
+	.page-nav.column-item.flex-middle.flex-parent.column
+		.flex-parent.row.layout-column.column-item
+			.flex-spaced.row-item.flex-parent.column
+				.flex-none.flex-middle.flex-parent.row
+					span.flex-none.row-item #{'Search: '}
+					textarea(id='search', class='flex-fill row-item', rows='1', wrap='off')
+					span.flex-none.row-item #{'Order By: '}
+						select#order
+							option(value='oldest', selected='selected') oldest
+							option(value='newest') newest
+			.flex-spaced.row-item.flex-parent.column
+				.flex-none.flex-middle.flex-parent.row
+					span.flex-none.row-item #{'Welcome, '}
+						span(id='user-name', data-id=id) #{name}!
+					.flex-fill
+					span.flex-none.row-item #{'Chat: '}
+						select#online
+							option ( Forum )
+							if online !== undefined
+								each user in online
+									option(value='#{user.name}') #{user.name}
