category and topic posts with navigation into, still not out of

--- a/views/partials/forum.pug
+++ b/views/partials/forum.pug
@@ -7,6 +7,8 @@ append content
 					#forum-content.flex-parent.column
 						#article-stubs.flex-none.flex-parent.column
 						#article-view.flex-none.flex-parent.column.hidden
+						#return.flex-none.flex-parent.row.layout-row.flex-center.hidden
+							h6.link.flex-none.column-item Return to Category
 					#forum-more.flex-parent.column.layout-column.hidden
 						br
 						.flex-none.flex-parent.row.layout-row.flex-center
