--- a/views/partials/templates.pug
+++ b/views/partials/templates.pug
@@ -16,11 +16,10 @@ append templates
 						h6.show-topics.flex-none.link Go to Topics
 					h6.return.flex-none.link Return to Categories
 				.replies.flex-none.column-item.flex-parent.column.hidden
-				.flex-right.flex-parent.row.hidden
+				.flex-center.flex-parent.row.hidden
 					.more-comments.flex-fill.flex-center.flex-parent.row.hidden
 						span.link More Comments
 						.loading.hidden
-					.reply.flex-none.link Reply to Category
 			// .topics.flex-none.column-item.flex-parent.column
 			// 	h6.show-topics.link Hide Topics for This Category
 			// 	.topic-stubs.flex-none.column-item.flex-parent.column
