fixed submission location, ranking

--- a/views/partials/forum.pug
+++ b/views/partials/forum.pug
@@ -7,8 +7,9 @@ append content
 					#forum-content.flex-parent.column
 						#article-stubs.flex-none.flex-parent.column
 						#article-view.flex-none.flex-parent.column.hidden
-						#return.flex-none.flex-parent.row.layout-row.flex-center.hidden
-							h6.link.flex-none.column-item Return to Category
+						#return.flex-none.flex-parent.row.layout-row.hidden
+							h6.the-category.link.flex-shared.center Return to Category
+							h6.all-categories.link.flex-shared.center Return to All Categories
 					#forum-more.flex-parent.column.layout-column.hidden
 						br
 						.flex-none.flex-parent.row.layout-row.flex-center
