--- a/views/partials/templates.pug
+++ b/views/partials/templates.pug
@@ -14,7 +14,7 @@ append templates
 					h6.show-comments.flex-none.link Show Comments
 					.flex-fill.flex-center.flex-parent.row
 						h6.show-topics.flex-none.link Go to Topics
-					h6.return.flex-none.link Return to Categories
+					h6.return.flex-none.link Return to All Categories
 				.replies.flex-none.column-item.flex-parent.column.hidden
 				.flex-center.flex-parent.row.hidden
 					.more-comments.flex-fill.flex-center.flex-parent.row.hidden
