reverted to node v4.6.1 ( c9 default ), attempting to conserve memory and storage

--- a/views/forum-view.pug
+++ b/views/forum-view.pug
@@ -10,7 +10,7 @@ append templates
 	include partials/templates
 
 append app-scripts
-	script
-		include scripts/template-poly.js
+	// script
+	// 	include scripts/template-poly.js
 	script
 		include scripts/forum.js
