--- a/views/partials/forum.pug
+++ b/views/partials/forum.pug
@@ -7,14 +7,14 @@ append content
 					#forum-content.flex-parent.column
 						#article-stubs.flex-none.flex-parent.column
 						#article-view.flex-none.flex-parent.column.hidden
+						#forum-loading.flex-parent.row.hidden
+							.loading
+						#forum-more.more-group.flex-center.flex-parent.row.hidden
+							h6.count
+							h6.more.link.row-item More
 						#return.flex-none.flex-parent.row.layout-row.hidden
 							h6.the-category.link.flex-shared.center Return to Category
 							h6.all-categories.link.flex-shared.center Return to All Categories
-					#forum-more.flex-parent.column.layout-column.hidden
-						br
-						.flex-none.flex-parent.row.layout-row.flex-center
-							span.link.row-item More
-							#forum-loading.loading.row-item.hidden
 		.flex-spaced.row-item.flex-parent.column
 			#forum-input.flex-fill.flex-parent.column
 				#user-post.flex-fill.flex-parent.column.column-item
