--- a/views/partials/page-nav.pug
+++ b/views/partials/page-nav.pug
@@ -9,6 +9,7 @@ append page-nav
 						select#order
 							option(value='oldest', selected='selected') oldest
 							option(value='newest') newest
+							option(value='recent') recent
 			.flex-spaced.row-item.flex-parent.column
 				.flex-none.flex-middle.flex-parent.row
 					span.flex-none.row-item #{'Welcome, '}
