--- a/views/partials/templates.pug
+++ b/views/partials/templates.pug
@@ -16,10 +16,11 @@ append templates
 						h6.show-topics.flex-none.link Go to Topics
 					h6.return.flex-none.link Return to All Categories
 				.replies.flex-none.column-item.flex-parent.column.hidden
-				.flex-center.flex-parent.row.hidden
-					.more-comments.flex-fill.flex-center.flex-parent.row.hidden
-						span.link More Comments
-						.loading.hidden
+				.comments-loading.flex-parent.row.hidden
+					.loading
+				.more-group.flex-center.flex-parent.row.hidden
+					h6.count
+					h6.more.link.row-item More
 			// .topics.flex-none.column-item.flex-parent.column
 			// 	h6.show-topics.link Hide Topics for This Category
 			// 	.topic-stubs.flex-none.column-item.flex-parent.column
