--- a/views/partials/templates.pug
+++ b/views/partials/templates.pug
@@ -11,16 +11,17 @@ append templates
 			.about.flex-none.column-item.flex-parent.row
 			.comments.flex-none.column-item.flex-parent.column
 				.flex-none.flex-parent.row
-					h6.show-comments.flex-none.link Show Comments
-					.flex-fill.flex-center.flex-parent.row
-						h6.show-topics.flex-none.link Go to Topics
-					h6.return.flex-none.link Return to All Categories
+					.flex-shared.flex-left
+						h6.show-comments.link Show Comments
+					.flex-shared.flex-right
+						h6.show-topics.link Go to Topics
+					// h6.all.flex-none.link Return to All Categories
 				.replies.flex-none.column-item.flex-parent.column.hidden
-				.comments-loading.flex-parent.row.hidden
-					.loading
-				.more-group.flex-center.flex-parent.row.hidden
-					h6.count
-					h6.more.link.row-item More
+				// .comments-loading.flex-parent.row.hidden
+				// 	.loading
+				// .more-group.flex-center.flex-parent.row.hidden
+				// 	h6.count
+				// 	h6.more.link.row-item More
 			// .topics.flex-none.column-item.flex-parent.column
 			// 	h6.show-topics.link Hide Topics for This Category
 			// 	.topic-stubs.flex-none.column-item.flex-parent.column
