--- a/public/css/site.css
+++ b/public/css/site.css
@@ -31,7 +31,7 @@ div, ul, ol {
 	letter-spacing: 0.08em;
 }
 
-ol li {
+ol li, ul li {
 	margin-left: 2em;
 }
 
@@ -297,7 +297,7 @@ select {
 }
 
 .reply p {
-	margin: 0.25em 0;
+	margin: 1em 0;
 	white-space: pre-wrap;
 }
 
