--- a/views/partials/layout.pug
+++ b/views/partials/layout.pug
@@ -2,6 +2,9 @@ doctype html
 html
 	head
 		meta(charset='utf-8')
+		meta(name="theme-color" content="default")
+		meta(name="msapplication-navbutton-color" content="default")
+		meta(name="apple-mobile-web-app-status-bar-style" content="default")
 		title#page-title Eon Forum & Chat
 		link(rel='stylesheet', type='text/css', href='css/site.css')
 		link(rel='stylesheet', type='text/css', href='css/atelier-estuary-dark.css')
@@ -18,6 +21,7 @@ html
 			block page-nav
 			hr.column-item
 			block content
+		audio(style='display:none' id='chat-notify' src='sound/typewriter-notification-fast.mp3')
 		block templates
 		block app-scripts
 		svg(width='0', height='0')
