fixed trailing newline in comments

--- a/views/partials/layout.pug
+++ b/views/partials/layout.pug
@@ -2,9 +2,9 @@ doctype html
 html
 	head
 		meta(charset='utf-8')
-		meta(name="theme-color" content="default")
-		meta(name="msapplication-navbutton-color" content="default")
-		meta(name="apple-mobile-web-app-status-bar-style" content="default")
+		meta(class='theme' name="theme-color" content="default")
+		meta(class='theme' name="msapplication-navbutton-color" content="default")
+		meta(class='theme' name="apple-mobile-web-app-status-bar-style" content="default")
 		title#page-title Eon Forum & Chat
 		link(rel='stylesheet', type='text/css', href='css/site.css')
 		link(rel='stylesheet', type='text/css', href='css/atelier-estuary-dark.css')
